hphp/hack/test/typecheck/references/refs_in_array/element_assign1b.php.exp
File "element_assign1b.php", line 5, characters 8-9:
References are only allowed as function call arguments (Parsing[1002])
