hphp/hack/test/typecheck/references/refs_in_array/element_assign1b.php
<?hh // partial

function test(): void {
  $y = 42;
  $z = &$y;
}
